[metadata]
name = pyphm
version = 0.0.3
author = Tim von Hahn
author_email = t.vonhahn@queensu.ca
description = Machinery data, made easy
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tvhahn/PyPHM
project_urls =
    Bug Tracker = https://github.com/tvhahn/PyPHM/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
include_package_data = True

# Add here dependencies of your project (semicolon/line-separated)
install_requires =
    pandas
    scipy
    numpy
    py7zr
    rarfile
    tqdm
    requests
    h5py
    tables

[options.package_data]
* = *.csv, *.mat

[options.packages.find]
where = src


